tests/errors/missing_closing_parenthesis_after_directive.odl
main :: () -> void {
    @test(1, 2;
};